# pi-cluster

./: .gitignore  AGENTS.md  BUILD.md  CMakeLists.txt  DEPLOY.md  LICENSE  README.md
cmake/: config.h.in
docs/: architecture.md  physnet.md
include/picluster/bench/: bench.h  calibration.h
include/picluster/core/: binary_splitting.h  chudnovsky.h
include/picluster/detect/: detect.h
include/picluster/progress/: progress.h
include/picluster/storage/: chunk.h  chunk_persist.h
include/picluster/util/: guardrails.h
scripts/slurm/: pi-64nodes.sbatch  pi-8nodes.sbatch  pi-single-node.sbatch
src/bench/: bench.cpp  calibration.cpp  mpi_bench.cpp
src/cli/: main.cpp
src/core/: binary_splitting.cpp  chudnovsky.cpp
src/cuda/: gpu_bench.cu  gpu_chudnovsky.cu  gpu_detect.cpp
src/detect/: detect.cpp  resources.cpp
src/mpi/: mpi_merge.cpp  mpi_runner.cpp
src/progress/: progress.cpp
src/storage/: checkpoint.cpp  chunk.cpp  chunk_persist.cpp  scratch.cpp
src/util/: format.cpp  guardrails.cpp
tests/smoke/: smoke_run.cpp
tests/unit/: test_chudnovsky.cpp  test_chunk_persist.cpp  test_detect.cpp  test_serialize.cpp
